# learnogl

./: .gitignore  CMakeLists.txt  learnogl  main.cpp
shaders/textures/: shader.fs  shader.vs
src/: fragment.glsl  main.cpp  shader.hpp  vertex.glsl
